<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <TextView
                android:id="@+id/textView1"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <Button
                    android:id="@+id/buttonBluetooth_1"
                    android:text="@string/buttonBluetooth_1"
                    android:onClick="bluetoothOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.03"></LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonL000"
                        android:text="@string/buttonL000"
                        android:onClick="L000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <Button
                        android:id="@+id/buttonL007"
                        android:text="@string/buttonL007"
                        android:onClick="L007"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/buttonBluetooth_0"
                    android:text="@string/buttonBluetooth_0"
                    android:onClick="bluetoothOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/buttonDiscoverable"
                android:text="@string/buttonDiscoverable"
                android:onClick="bluetoothDiscoverable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/buttonDiscover"
                android:text="@string/buttonDiscover"
                android:onClick="bluetoothDiscover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/buttonConnect"
                android:text="@string/buttonConnect"
                android:onClick="bluetoothConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/buttonDisconnect"
                android:text="@string/buttonDisconnect"
                android:onClick="bluetoothDisonnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ListView
                android:id="@+id/listViewDiscovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                >

            </ListView>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>